add comments for mockjax

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     </div><!-- /#wrapper -->
     <!-- JavaScript -->
 	<script src="js/jquery-1.10.2.js"></script>
+	<script src="js/jquery.mockjax.js"></script>
     <script src="js/bootstrap-3.0.2.js"></script>
     <script src="js/jquery.bootgrid.js"></script>
     <script src="js/jquery.bootgrid.fa.js"></script>
